Fix typo in video options array

--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
            currentURL = "rickroll.mp4";
          } else if (rand < 0.99) {
            // 19% chance
-            const options = ["lofirick.mp4", "rickunderstand.mp4", "rockboogie.mp4"];
+            const options = ["lofirick.mp4", "rickunderstand.mp4", "rickboogie.mp4"];
             const choice = Math.floor(Math.random() * options.length);
             currentURL = options[choice];
          } else {
