Modify video source for better flexibility
Updated video source element to remove hardcoded URL.

--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
       
        <video autoplay loop width="100%">
 
-    <source src="https://raw.githubusercontent.com/avpxxd/Kcir/main/rickroll.mp4" type="video/mp4">
+    <source type="video/mp4">
 
     Sorry, your browser doesn't support embedded videos.
 </video>
@@ -30,6 +30,7 @@
          }
          //const currentURL = "rickroll.mp4";
          const pageTitle = "Loading...";
+         videoElement.src = currentURL;
          // End of changable variables
          
          function setTitle() {
