--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
       
        <video autoplay loop width="100%">
 
-    <source type="video/mp4">
+    <source src="https://github.com/avpxxd/Kcir/raw/refs/heads/main/rickroll.mp4" type="video/mp4">
 
     Sorry, your browser doesn't support embedded videos.
 </video>
@@ -30,7 +30,6 @@
          }
          //const currentURL = "rickroll.mp4";
          const pageTitle = "Loading...";
-         videoElement.src = currentURL;
          // End of changable variables
          
          function setTitle() {
